src/test/deca/codegen/valid/without_class/convfloat_assign.deca
// Description:
//    Teste l'assignation int vers float
//
// Result:
//    0.00000e+00
//
// Historique:
//    cree le 13/01/2023
{
    float t;
    t = 0;
    print(t);
}